IMAP: allow ']' when parsing an astring

The IMAP code would by mistake reject tokens that contain a resp-special
character ']' when asked for parsing astrings. This was because the of the rule:

    ATOM-CHAR       = <any CHAR except atom-specials> rule

...which confused me enough so that I ignored an explicit allowance for the
resp-specials earlier in the ASTRING-CHAR rule.

Thanks to Miguel <migtavares@gmail.com> (DeviantPeer on IRC) for reporting this.
Sorry for the trouble.

BUG: 332651
REVIEW: 117105